atualização de dados

--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -19,6 +19,6 @@
         window.alert('Minha primeira mensagem')
         window.confirm('Esta gostando de JavaScript?')
         window.prompt('Qual é seu nome?')
-    </script>
+    </script><!--no JS // e /**/ se utiliza para comentarios dentro do script-->
 </body>
 </html>
