--- a/exercicios/ex01 - Copia/ex12.html
+++ b/exercicios/ex01 - Copia/ex12.html
@@ -20,7 +20,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; Julio Cezar</p>
+        <p>&copy; <a href="https://github.com/JulioC1312">Julio Cezar</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
